2002-01-11  Kevin Vandersloot <kfv101@psu.edu>

	* procman.spec: Update thanks to Havoc Pennington
	<hp@redhat.com>

2002-01-08  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: release 1.1.2. Bump requirements

	* TODO: Pretty much complete :)

2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added portuguese to ALL_LINGUAS

2001-12-13  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: add gconf schema support

2001-12-11  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" to ALL_LINGUAS.

Sat Dec  8 13:09:28 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix so $ACLOCAL_FLAGS is honoured
	when aclocal is run for --enable-maintainer-mode

2001-12-08  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in, Makefile.am: use intltool instead of xml-i18n-tools;
	define GETTEXT_PACKAGE
	* acconfig.h: add template for GETTEXT_PACKAGE
	* src/procan.c: get translated messages in UTF-8 codeset.
	* src/Makefile.am: (INCLUDES): remove intl
	(procman_LDADD): remove $(INTLLIBS)

2001-12-03  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS

2001-11-25  Kevn Vandersloot <kfv101@psu.edu>

	* configure.in: fix the check for gtk. That should
	be gtk+-2.0 not gtk-2.0

	* src/Makefile.am: remove LIBGTOP_LIBS and LIBGTOP_CFLAGS

2001-11-25  Kevn Vandersloot <kfv101@psu.edu>

	* configure.in: check for libgtop-2.0.pc. This makes procman
	fully GNOME 2.0 dependant :) You have to get libgtop from a
	as yet unknown branch. DO NOT get it from HEAD! I will make
	a libgtop branch soon and it will be stable ported to 
	GNOME 2.0

2001-11-26  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Add check for (upcoming) gtk 1.3.11. It won't
	  even compile with gtk 1.3.10.

2001-11-23  Kevin Vandersloot <kfv101@psu.edu>

        * configure.in, Makefile.am: no longer need the intl/
        and macros/ directory. Update for GNOME 2.0. Side effect