@@ -1,3 +1,7 @@
+2002-01-12  Kevin Vandersloot <kfv101@psu.edu>
+
+	* Makefile.am: small fix for the schemas file for making rpms
+
 2002-01-10  Kevin Vandersloot <kfv101@psu.edu>
 
 	* Makefile.am: dist the schemas file
