@@ -1,3 +1,7 @@
+2002-01-12  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.spec: Fix the spec file
+
 2002-01-11  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.spec: Update thanks to Havoc Pennington
